# BarBags_tg_bot

./: .env  README.md  app.py  pyproject.toml
bookmarks/: bookmarks_chat.py
config/: settings.py
database/: connect.py  models.py
exceptions/: error_handler.py
groups/: moderate_group.py
handlers/admin/: management.py
handlers/user/: catalog.py  start.py
keyboards/: builders.py  inline.py
middleware/: moderator.py
migrations/: env.py
migrations/versions/: 749d517afaa0_init.py
utils/: commands.py  smt_texts.py  statistics.py  test.html
